--- a/views/pizza.html
+++ b/views/pizza.html
@@ -1,8 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>  
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/bootstrap-grid.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Cam's Pizzeria" />
+  <meta name="author" content="Cameron Pittman" />
+  <title>Cam's Pizzeria</title>
+   
 </head>
 
 <body>
@@ -137,7 +141,7 @@
     </div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
   </div>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/main.min.js"></script>
 </body>
 
 </html>
